--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -35,7 +35,7 @@
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-  [[main]]
-     name = "Resume"
-     url = "files/resume.pdf"
-     weight = 3
+ [[main]]
+    name = "Resume"
+    url = "files/cv.pdf"
+    weight = 3
