--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -61,14 +61,14 @@ privacy_pack = false
 gravatar = false
 
 # Contact Widget setup
-  email = "test@example.org"
-  address = "Building 1 Room 1, Stanford University, California, 90210, USA"
+  email = "gianninapachas@gmail.com"
+  address = "Arlington, TX"
   # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
-  office_hours = """Monday 10:00 to 13:00<br>
-                    Wednesday 09:00 to 10:00<br>
-                    Otherwise email to book an appointment"""
-  phone = "888 888 88 88"
-  skype = "echo123"
+  # office_hours = """Monday 10:00 to 13:00<br>
+                    # Wednesday 09:00 to 10:00<br>
+                    # Otherwise email to book an appointment"""
+  # phone = "888 888 88 88"
+  skype = ""
   telegram = ""
   keybase = ""  # Your keybase.io username.
 
