--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,15 +8,15 @@
   url = "#about"
   weight = 1
 
-#[[main]]
-  #name = "Publications"
-  #url = "#publications_featured"
-  #weight = 2
+[[main]]
+  name = "Skills"
+  url = "#skills"
+  weight = 2
 
-#[[main]]
-  #name = "Posts"
-  #url = "#posts"
-  #weight = 3
+[[main]]
+  name = "Experience"
+  url = "#experience"
+  weight = 3
 
 #[[main]]
   #name = "Projects"
@@ -31,11 +31,11 @@
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 2
+  weight = 4
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
  [[main]]
     name = "Resume"
     url = "files/resume.pdf"
-    weight = 3
+    weight = 5
