--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -27,15 +27,20 @@
   name = "Projects"
   url = "#projects"
   weight = 5
+  
+[[main]]
+  name = "Posts"
+  url = "#posts"
+  weight = 6
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 6
+  weight = 7
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
  [[main]]
     name = "Resume"
     url = "files/resume.pdf"
-    weight = 7
+    weight = 8
